Add Now Playing to the ControlActivity menu.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -55,6 +55,7 @@
   <string name="control_menu_repeat_all">Repeat all</string>
   <string name="control_menu_shuffle_on">Shuffle on</string>
   <string name="control_menu_shuffle_off">Shuffle off</string>
+  <string name="control_menu_nowplaying">Now Playing</string>
   <string name="library_menu_refresh">Refresh</string>
   <string name="library_menu_manual">Manual add</string>
   <string name="library_menu_forget">Forget all</string>
