Fixes #52 and #68 calculating the time values incorrectly because of TimeZone.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -73,7 +73,7 @@
     You\'ll need to enter a 4-digit code to finish the pairing process:</string>
   <string name="pairing_caption2">After entering the code on your desktop/laptop, this window should disappear. If you get stuck,
     just tap the back button to cancel.</string>
-  <string name="wizard_title1">TunesRemote+ helps you remote control your DACP-compatible desktop or laptop media player, such as
+  <string name="wizard_title1">TunesRemote+ 2.4.1 helps you remote control your DACP-compatible desktop or laptop media player, such as
     Apple iTunes\u2122,MonkeyTunes for MediaMonkey, and Telescope for Songbird.</string>
   <string name="wizard_title2">It lets you easily browse your albums, including full-text search from a distance.</string>
   <string name="wizard_eula">Before we get started, we need to get some legal information out of the way:\n\nTunesRemote+
