--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -99,6 +99,8 @@
   <string name="pref_searchmax">searchmax</string>
   <string name="pref_volumeincrement">volumeincrement</string>
   <string name="pref_autopause">autopause</string>
+  <string name="pref_cropimage">cropimage</string>
+  <string name="pref_fullscreen">fullscreen</string>
   <string name="artists_menu_queue">Queue Artist</string>
   <string name="albums_menu_queue">Queue Album</string>
   <string name="tracks_menu_play">Play Track</string>
