--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -54,8 +54,8 @@
   <string name="control_menu_repeat_none">No repeat</string>
   <string name="control_menu_repeat_one">Repeat single</string>
   <string name="control_menu_repeat_all">Repeat all</string>
-  <string name="control_menu_shuffle_on">Shuffle is off</string>
-  <string name="control_menu_shuffle_off">Shuffle is on</string>
+  <string name="control_menu_shuffle_on">Shuffle is on</string>
+  <string name="control_menu_shuffle_off">Shuffle is off</string>
   <string name="control_menu_nowplaying">Now Playing</string>
   <string name="control_menu_speakers">Speakers</string>
   <string name="control_menu_clearcue">Clear Cue</string>
@@ -110,4 +110,10 @@
   <string name="search_menu_open_artist">Open Artist</string>
   <string name="speakers_dialog_computer_speaker">Computer Speaker</string>
   <string name="speakers_dialog_airport_express">Airport Express</string>
+  <string name="control_menu_settings">Settings</string>
+  <string name="control_menu_about">About</string>
+  <string name="wifi_disabled_title">Wifi is turned off</string>
+  <string name="wifi_disabled">Please make sure to turn on your wifi in Settings.</string>
+  <string name="no_network_title">No wifi connection</string>
+  <string name="no_network">Currently not connected to a wifi network. Please check your wifi settings.</string>
 </resources>
