- updated play/prev/next buttons - higher album art quality (dependent on device) - ArtistsActivity now shows loading animation (rather than "No artists") when loading - Potential fix for special characters in Artist names (Issue #14; please test on 2.0), including java.text.Normalizer backport - improved album track listing

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -116,4 +116,5 @@
   <string name="wifi_disabled">Please make sure to turn on your wifi in Settings.</string>
   <string name="no_network_title">No wifi connection</string>
   <string name="no_network">Currently not connected to a wifi network. Please check your wifi settings.</string>
+  <string name="loading">Loading...</string>
 </resources>
