--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -117,4 +117,6 @@
   <string name="no_network_title">No wifi connection</string>
   <string name="no_network">Currently not connected to a wifi network. Please check your wifi settings.</string>
   <string name="loading">Loading...</string>
+  <string name="control_menu_library">Music Library</string>
+  <string name="cancel">Cancel</string>
 </resources>
