--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -73,7 +73,7 @@
     You\'ll need to enter a 4-digit code to finish the pairing process:</string>
   <string name="pairing_caption2">After entering the code on your desktop/laptop, this window should disappear. If you get stuck,
     just tap the back button to cancel.</string>
-  <string name="wizard_title1">TunesRemote+ 2.4.3 helps you remote control your DACP-compatible desktop or laptop media player, such as
+  <string name="wizard_title1">TunesRemote+ 2.5.0 helps you remote control your DACP-compatible desktop or laptop media player, such as
     Apple iTunes\u2122,MonkeyTunes for MediaMonkey, and Telescope for Songbird.</string>
   <string name="wizard_title2">It lets you easily browse your albums, including full-text search from a distance.</string>
   <string name="wizard_eula">Before we get started, we need to get some legal information out of the way:\n\nTunesRemote+
@@ -88,8 +88,8 @@
   <string name="wizard_neg">Cancel</string>
   <string name="dia_ipaddress">IP address</string>
   <string name="dia_code">Pairing code</string>
-  <string name="item_fetch">Fetching more search results...</string>
-  <string name="item_network_title">Searching network for libraries...</string>
+  <string name="item_fetch">Fetching more search results&#8230;</string>
+  <string name="item_network_title">Searching network for libraries&#8230;</string>
   <string name="item_network_caption">Open server application and make sure you\'re on the same Wifi network. If having trouble, try cycling your Wifi, opening port 3689 in your firewall, or tapping Menu and Refresh.</string>
   <string name="toast_volume_title">Remote volume</string>
   <string name="pref_background">background</string>
@@ -116,7 +116,7 @@
   <string name="wifi_disabled">Please make sure to turn on your wifi in Settings.</string>
   <string name="no_network_title">No wifi connection</string>
   <string name="no_network">Currently not connected to a wifi network. Please check your wifi settings.</string>
-  <string name="loading">Loading...</string>
+  <string name="loading">Loading&#8230;</string>
   <string name="control_menu_library">Music Library</string>
   <string name="cancel">Cancel</string>
 </resources>
