--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -25,7 +25,7 @@
 -->
 <resources>
   <string name="app_name">TunesRemote+</string>
-  <string name="app_desc">Remote control for DACP-compatible desktop music players such as Apple iTunes, MonkeyTunes for MediaMonkey, and Telescope for Songbird</string>
+  <string name="app_desc">Remote control for DACP-compatible desktop music players such as Apple iTunes and MonkeyTunes for MediaMonkey</string>
   <string name="search_label">TunesRemote+ Search</string>
   <string name="search_hint">Music keywords</string>
   <string name="search_empty">No search results found</string>
@@ -49,8 +49,8 @@
   <string name="control_menu_artists">Artists</string>
   <string name="control_menu_playlists">Playlists</string>
   <string name="control_menu_albums">Albums</string>
-  <string name="control_menu_picklibrary">Pick Library...</string>
-  <string name="control_menu_addlibrary">Add Library...</string>
+  <string name="control_menu_picklibrary">Pick Library&#8230;</string>
+  <string name="control_menu_addlibrary">Add Library&#8230;</string>
   <string name="control_menu_repeat_none">No repeat</string>
   <string name="control_menu_repeat_one">Repeat single</string>
   <string name="control_menu_repeat_all">Repeat all</string>
@@ -73,7 +73,7 @@
     You\'ll need to enter a 4-digit code to finish the pairing process:</string>
   <string name="pairing_caption2">After entering the code on your desktop/laptop, this window should disappear. If you get stuck,
     just tap the back button to cancel.</string>
-  <string name="wizard_title1">TunesRemote+ 2.5.0 helps you remote control your DACP-compatible desktop or laptop media player, such as
+  <string name="wizard_title1">TunesRemote+ 2.5.1 helps you remote control your DACP-compatible desktop or laptop media player, such as
     Apple iTunes\u2122,MonkeyTunes for MediaMonkey, and Telescope for Songbird.</string>
   <string name="wizard_title2">It lets you easily browse your albums, including full-text search from a distance.</string>
   <string name="wizard_eula">Before we get started, we need to get some legal information out of the way:\n\nTunesRemote+
