Uncategorized preferences are now under "General Preferences" Added preferences for shuffle/repeat Toast Added preference for removing Rating Box Added GestureOverlayView between info bar and rating box -Swipe left/right to change songs Added preference for inverting gestures Removed rating bar invisibility on load to prevent flickering

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -119,4 +119,7 @@
   <string name="loading">Loading&#8230;</string>
   <string name="control_menu_library">Music Library</string>
   <string name="cancel">Cancel</string>
+  <string name="pref_showtoast">preftoast</string>
+  <string name="pref_invertgestures">invertgestures</string>
+  <string name="pref_showrating">showrating</string>
 </resources>
