Added feature from issue 87 - Now Playing button will now take you to the current selected playlist Preference added for default Now Playing button (playlist or song's album) If Playlist is selected to the button, it will failsafe back to album if no playlist is selected Changed color of currently playing song to blue instead of cyan, because it's too similar to white

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -164,5 +164,14 @@
     <string name="notify_dialog_explain">The notification allows you to control your music outside the app itself. To
         disconnect and hide the notification once you are done using it, press the cross at the right edge.
     </string>
+    <string name="pref_nowplayingaction">nowplaying</string>
+    <string-array name="pref_npvalues">
+        <item >nowplaying</item>
+        <item >playlist</item>
+    </string-array>
+    <string-array name="pref_npentries">
+        <item >Current Album</item>
+        <item >Selected Playlist</item>
+    </string-array>
 
 </resources>
